--- a/resources/views/partials/bootstrap-pane.edge
+++ b/resources/views/partials/bootstrap-pane.edge
@@ -1,6 +1,6 @@
 <div class="tab-pane fade {{ isActive ? 'show active' : '' }} {{ addClass || '' }}" 
-id="pills-{{ dashCase(tabName) }}" role="tabpanel" 
-aria-labelledby="pills-{{ dashCase(tabName) }}-tab"
+id="tab-{{ dashCase(tabName) }}" role="tabpanel" 
+aria-labelledby="tab-{{ dashCase(tabName) }}-tab"
 {{ $props.serializeExcept(['tabName', 'id']) }}>
     {{{ await $slots.main() }}}
 </div>
