[ADD] blog management

--- a/resources/views/layouts/admin.edge
+++ b/resources/views/layouts/admin.edge
@@ -10,7 +10,7 @@
     <div class="wrapper">
         @include('partials/preloader')
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <a href="index3.html" class="brand-link">
+            <a href="{{ route('admin.dashboard') }}" class="brand-link">
                 <img src="/assets/img/icon/bemupnvj.svg" alt="{{ process.env.APP_NAME }} Logo"
                 class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">
@@ -28,6 +28,11 @@
                     @!component('partials/dashboard-menu', {
                         url: route('admin.primary_cover.index'),
                         text: 'Primary Cover',
+                        iconMenu: 'fas fa-th'
+                    })
+                    @!component('partials/dashboard-menu', {
+                        url: route('blog.manage'),
+                        text: 'Blog',
                         iconMenu: 'fas fa-th'
                     })
                     @component('partials/dashboard-menu', {
