--- a/resources/views/partials/trigger-modal.edge
+++ b/resources/views/partials/trigger-modal.edge
@@ -1,5 +1,5 @@
 @if(type == 'anchor')
-<a class="{{ classnya }}" href="javascript:void(0);" 
+<a class="{{ classnya || 'btn btn-primary' }}" href="javascript:void(0);" 
 data-toggle="modal" data-target="#modal-{{ targetModal }}">
     @if(icon)
         <span class="mr-2">{{ text }}</span>
@@ -9,7 +9,8 @@ data-toggle="modal" data-target="#modal-{{ targetModal }}">
     @end
 </a>
 @else
-<button class="{{ classnya }}" data-toggle="modal" data-target="#modal-{{ targetModal }}">
+<button class="{{ classnya || 'btn btn-primary ' + addClass  }}" 
+data-toggle="modal" data-target="#modal-{{ targetModal }}">
     @if(icon)
         <span class="mr-2">{{ text }}</span>
         <i class="fas {{ icon }}"></i>
