--- a/resources/views/blog/manage.edge
+++ b/resources/views/blog/manage.edge
@@ -44,6 +44,30 @@
             @set('action', 'edit')
             @include('blog/article/form')
         @end
+
+        @component('partials/bootstrap-modal', {id: 'delete-article-' + article.id})
+        <form action="{{ route('blog.destroy', {
+            id: article.id}, {qs: {_method: 'DELETE'}
+        }) }}" method="post">
+            {{ csrfField() }}
+            <p>
+                Are you sure wanna delete <strong>{{ article.title }}</strong> article?
+            </p>
+            <button type="submit" class="btn btn-danger">Delete it</button>
+        </form>
+        @end
     @end
 
+@end
+
+@section('scripts')
+    @if(flashMessages.get('notification') == 'Berhasil menghapus artikel')
+        <script>
+            $("#tab-kategori-tab").removeClass('active').attr('aria-selected', 'false')
+            $("#tab-artikel-tab").addClass('active').attr('aria-selected', 'true')
+        
+            $("#tab-kategori").removeClass('show active')
+            $("#tab-artikel").tab('show')
+        </script>
+    @end
 @end
