[ADD] edit category blog

--- a/resources/views/blog/category/index.edge
+++ b/resources/views/blog/category/index.edge
@@ -8,7 +8,7 @@
             link: 'javascript:void(0);'
         })
             @!component('partials/trigger-modal', {
-                targetModal: action + 'telephone',
+                targetModal: 'edit-category-' + category.id,
                 classnya: 'btn btn-default text-primary',
                 icon: 'fa-edit',
                 text: 'Ubah'
