--- a/resources/views/blog/category/edit.edge
+++ b/resources/views/blog/category/edit.edge
@@ -1,8 +1,10 @@
 @each((category, index) in categories)
     @component('partials/bootstrap-modal', {
-        id: 'edit-category' + (Number(index) + 1)
+        id: 'edit-category-' + category.id
     })
-    <form action="{{ route('blog_category.update', {id: category.id}) }}" method="post">
+    <form action="{{ route('admin.blog_category.update', {
+        id: category.id}, {qs: {_method: 'PUT'}
+    }) }}" method="post">
         {{ csrfField() }}
         @!component('partials/bootstrap-input', {
             name: 'category',
