--- a/resources/views/blog/article/form.edge
+++ b/resources/views/blog/article/form.edge
@@ -41,6 +41,20 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label class="d-block mb-1">Tampilkan di halaman</label>
+        @each((page, index) in listPage)
+        <div class="d-inline-flex align-items-center mr-2">
+            <input type="radio" id="{{ dashCase(page) }}" name="show_at_page" 
+            {{ article ? (article.show_at_page == page ? 'checked' : '') : 
+            (index == 0 ? 'checked' : '') }} value="{{ dashCase(page) }}" required>
+            <label class="mb-0 ml-1" for="{{ dashCase(page) }}">
+                {{ noCase(page) }}
+            </label>
+        </div>
+        @endeach
+    </div>
+
     @if(flashMessages.has('errors.cover'))
     <small class="form-text text-danger">
         {{ flashMessages.get('errors.cover') }}
